--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "python.pythonPath": ".venv/bin/python3"
+  "python.pythonPath": ".venv/bin/python3",
+  "python.formatting.provider": "black",
+  "[python]": {
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true
+  }
 }
