--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ keywords = [
 python = "^3.7"
 
 [tool.poetry.dev-dependencies]
+black = { version = "^18.3-alpha.0", allows-prereleases = true }
 
 [build-system]
 requires = ["poetry>=0.12"]
