--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,16 @@ keywords = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
+sphinx = "^1.8"
+click = "^7.0"
+recommonmark = "^0.5.0"
+watchdog = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 black = { version = "^18.3-alpha.0", allows-prereleases = true }
+
+[tool.poetry.scripts]
+mudkip = 'mudkip.cli:mudkip'
 
 [build-system]
 requires = ["poetry>=0.12"]
