--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sphinx = "^1.8"
 click = "^7.0"
 recommonmark = "^0.5.0"
 watchdog = "^0.9.0"
+toml = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 black = { version = "^18.3-alpha.0", allows-prereleases = true }
