--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ click = "^7.0"
 recommonmark = "^0.5.0"
 watchdog = "^0.9.0"
 toml = "^0.10.0"
+sphinx-autodoc-typehints = "^1.6"
 
 [tool.poetry.dev-dependencies]
 black = { version = "^18.3-alpha.0", allows-prereleases = true }
