--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ sphinx-autodoc-typehints = "^1.6"
 sphinx_rtd_theme = "^0.4.3"
 livereload = "^2.6"
 tomlkit = "^0.5.3"
+nbsphinx = "^0.4.2"
+notebook = "^5.7"
 
 [tool.poetry.dev-dependencies]
 black = { version = "^18.3-alpha.0", allows-prereleases = true }
