--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,12 @@ sphinx = "^3.1.1"
 click = "^7.0"
 recommonmark = "^0.6.0"
 watchdog = "^0.10.2"
-sphinx-autodoc-typehints = "^1.6"
-sphinx_rtd_theme = "^0.4.3"
+sphinx-autodoc-typehints = "^1.11.0"
+sphinx_rtd_theme = "^0.5.0"
 livereload = "^2.6"
 tomlkit = "^0.6.0"
-nbsphinx = "^0.6.0"
-jupyter = "^1.0"
+nbsphinx = "^0.7.1"
+notebook = "^6.0.3"
 jupyter_nbextensions_configurator = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
