--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ tomlkit = ">=0.6,<0.8"
 nbsphinx = ">=0.7.1,<0.9.0"
 notebook = "^6.0.3"
 jupyter_nbextensions_configurator = "^0.4.1"
+colorama = {version = "*", markers = 'sys_platform == "win32"'}
 
 [tool.poetry.dev-dependencies]
 black = { version = "^20.8b1", allow-prereleases = true }
