--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ jupyter_nbextensions_configurator = "^0.4.1"
 colorama = {version = "*", markers = 'sys_platform == "win32"'}
 myst-parser = "^0.13.5"
 myst-nb = "^0.12.0"
+furo = "^2021.3.20-beta.31"
 
 [tool.poetry.dev-dependencies]
 black = { version = "^20.8b1", allow-prereleases = true }
