--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,17 @@ furo = "^2021.3.20-beta.31"
 
 [tool.poetry.dev-dependencies]
 black = { version = "^21.4b2", allow-prereleases = true }
+python-semantic-release = "^7.15.4"
 
 [tool.poetry.scripts]
 mudkip = 'mudkip.cli:main'
+
+[tool.mudkip]
+preset = "furo"
+
+[tool.mudkip.override]
+html_title = "Mudkip"
+suppress_warnings = ["myst.header"]
 
 [build-system]
 requires = ["poetry>=0.12"]
