--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ branch = "main"
 version_variable = ["mudkip/__init__.py:__version__"]
 version_toml = "pyproject.toml:tool.poetry.version"
 major_on_zero = false
-build_command = "poetry build"
+build_command = "poetry build && poetry run mudkip build --check --update-gh-pages --repository https://x-access-token:${GH_TOKEN}@github.com/vberlier/mudkip"
 
 [tool.mudkip]
 preset = "furo"
