--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,13 @@ keywords = [
 [tool.poetry.dependencies]
 python = "^3.8"
 Sphinx = "^3.5.3"
-click = ">=7.1.2,<9.0.0"
-watchdog = "^2.0.2"
-sphinx-autodoc-typehints = "^1.11.1"
-sphinx-rtd-theme = "^0.5.1"
+click = ">=7.1.2"
+watchdog = "^2.1.3"
+sphinx-autodoc-typehints = "^1.12.0"
+sphinx-rtd-theme = "^0.5.2"
 livereload = "^2.6.3"
 tomlkit = "^0.7.0"
-notebook = "^6.3.0"
+notebook = "^6.4.3"
 jupyter_nbextensions_configurator = "^0.4.1"
 colorama = {version = "*", markers = 'sys_platform == "win32"'}
 myst-parser = "^0.13.5"
@@ -37,7 +37,7 @@ furo = "^2021.3.20-beta.31"
 
 [tool.poetry.dev-dependencies]
 black = { version = "^21.7b0", allow-prereleases = true }
-python-semantic-release = "^7.16.0"
+python-semantic-release = "^7.18.0"
 
 [tool.poetry.scripts]
 mudkip = 'mudkip.cli:main'
