--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,9 @@ keywords = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-Sphinx = "^3.5.3"
-click = ">=7.1.2"
-watchdog = "^2.1.3"
+Sphinx = "^4.1.2"
+click = "^8.0.1"
+watchdog = "^2.1.5"
 sphinx-autodoc-typehints = "^1.12.0"
 sphinx-rtd-theme = "^0.5.2"
 livereload = "^2.6.3"
@@ -31,13 +31,13 @@ tomlkit = "^0.7.0"
 notebook = "^6.4.3"
 jupyter_nbextensions_configurator = "^0.4.1"
 colorama = {version = "*", markers = 'sys_platform == "win32"'}
-myst-parser = "^0.13.5"
-myst-nb = "^0.12.0"
-furo = "^2021.3.20-beta.31"
+myst-parser = "^0.15.2"
+myst-nb = "^0.13.0"
+furo = "^2021.9.8"
 
 [tool.poetry.dev-dependencies]
-black = { version = "^21.7b0", allow-prereleases = true }
-python-semantic-release = "^7.18.0"
+black = "^21.8b0"
+python-semantic-release = "^7.19.2"
 
 [tool.poetry.scripts]
 mudkip = 'mudkip.cli:main'
