--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,19 +21,17 @@ keywords = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-Sphinx = "^4.2.0"
-click = "^8.0.1"
-watchdog = "^2.1.5"
-sphinx-autodoc-typehints = "^1.12.0"
+Sphinx = "^4.4.0"
+click = "^8.0.4"
+watchdog = "^2.1.6"
 sphinx-rtd-theme = "^1.0.0"
 livereload = "^2.6.3"
 tomlkit = "^0.7.0"
-notebook = "^6.4.4"
+notebook = "^6.4.8"
 jupyter_nbextensions_configurator = "^0.4.1"
 colorama = {version = "*", markers = 'sys_platform == "win32"'}
-myst-parser = "^0.15.2"
-myst-nb = "^0.13.0"
-furo = ">=2021.9.22,<2023.0.0"
+myst-nb = "^0.13.2"
+furo = "^2022.2.14"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1"
