--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,20 +22,20 @@ keywords = [
 [tool.poetry.dependencies]
 python = "^3.8"
 Sphinx = "^4.5.0"
-click = "^8.1.2"
-watchdog = "^2.1.7"
+click = "^8.1.3"
+watchdog = "^2.1.8"
 sphinx-rtd-theme = "^1.0.0"
 livereload = "^2.6.3"
 tomlkit = ">=0.7.0"
-notebook = "^6.4.10"
+notebook = "^6.4.11"
 jupyter_nbextensions_configurator = "^0.4.1"
 colorama = {version = "*", markers = 'sys_platform == "win32"'}
-myst-nb = ">=0.13.2"
-furo = "^2022.3.4"
+myst-nb = "^0.15.0"
+furo = "^2022.4.7"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
-python-semantic-release = "^7.28.0"
+python-semantic-release = "7.28.1"
 
 [tool.poetry.scripts]
 mudkip = 'mudkip.cli:main'
