--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,24 +21,31 @@ keywords = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-Sphinx = "^4.5.0"
+Sphinx = "^5.1.1"
 click = "^8.1.3"
-watchdog = "^2.1.8"
+watchdog = "^2.1.9"
 sphinx-rtd-theme = "^1.0.0"
 livereload = "^2.6.3"
 tomlkit = ">=0.7.0"
-notebook = "^6.4.11"
-jupyter_nbextensions_configurator = "^0.4.1"
+notebook = "^6.4.12"
+jupyter-nbextensions-configurator = "^0.5.0"
 colorama = {version = "*", markers = 'sys_platform == "win32"'}
-myst-nb = "^0.15.0"
-furo = "^2022.4.7"
+myst-nb = "^0.16.0"
+furo = "^2022.6.21"
 
 [tool.poetry.dev-dependencies]
-black = "^22.3.0"
-python-semantic-release = "7.28.1"
+black = "^22.6.0"
+python-semantic-release = "^7.31.2"
+isort = "^5.10.1"
 
 [tool.poetry.scripts]
 mudkip = 'mudkip.cli:main'
+
+[tool.black]
+target-version = ["py38"]
+
+[tool.isort]
+profile = "black"
 
 [tool.semantic_release]
 branch = "main"
