--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,23 @@
 {
-  "python.pythonPath": ".venv/bin/python3",
   "python.formatting.provider": "black",
+  "python.languageServer": "Pylance",
+  "python.linting.enabled": false,
+  "python.linting.pylintEnabled": false,
+  "python.linting.banditEnabled": false,
+  "python.linting.flake8Enabled": false,
+  "python.linting.mypyEnabled": false,
+  "python.linting.prospectorEnabled": false,
+  "python.linting.pycodestyleEnabled": false,
+  "python.linting.pydocstyleEnabled": false,
+  "python.linting.pylamaEnabled": false,
+  "python.analysis.importFormat": "relative",
   "[python]": {
+    "editor.tabSize": 4,
     "editor.formatOnSave": true,
-    "editor.formatOnType": true
+    "editor.formatOnType": false,
+    "editor.formatOnPaste": false,
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    }
   }
 }
