--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ jupyter-nbextensions-configurator = "^0.5.0"
 colorama = {version = "*", markers = 'sys_platform == "win32"'}
 myst-nb = "^0.16.0"
 furo = "^2022.6.21"
+sphinxcontrib-mermaid = "^0.7.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
